--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<li class="nav-item">
 			<a class="nav-link" href="#">Derde link</a>
 		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">Vierde link</a>
+		</li>
 	</ul>
 </div>
 </nav>
