--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 	</ul>
 </div>
 </nav>
+
+<div class="jumbotron jumbotron-fluid">
+	<div class="container">
+		<h1 class="display-4">Fluid jumbotron</h1>
+		<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+	</div>
+</div>
+	
 	
 <div class="container">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi laoreet leo in sem viverra fermentum. Nam facilisis arcu nibh, rutrum tincidunt nulla vestibulum quis. Quisque a elit vel metus mattis efficitur. Nunc diam quam, auctor et aliquet a, sagittis quis orci. Proin luctus tristique arcu, sed vehicula odio volutpat ut. Proin luctus metus dolor, non elementum leo vehicula ut. Morbi viverra varius interdum. Duis quis purus lorem. Aliquam magna enim, dictum sit amet nunc sed, imperdiet pretium urna. In lobortis interdum sagittis.
