--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 </nav>
 
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid header">
 	<div class="container">
 		<h1 class="display-4">Fluid jumbotron</h1>
 		<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
