--- a/index.html
+++ b/index.html
@@ -10,46 +10,48 @@
 </head>
 	
 <body>
-<div class="jumbotron jumbotron-fluid banner">
+<div class="jumbotron jumbotron-fluid jumbo">
 	<div class="container">
 		<h1 class="display-4">Fluid jumbotron</h1>
 		<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
 	</div>
 </div>
 	
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
+<div class="menu-top">	
+	<nav class="navbar navbar-expand-sm navbar-light bg-light">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-	<ul class="navbar-nav mr-auto">
-		<li class="nav-item active">
-			<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Eerste link</a>
-		</li>
-		<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tweede link</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">Sublink 1</a>
-					<a class="dropdown-item" href="#">Sublink 2</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="#">Sublink 3</a>
-				</div>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Derde link</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Vierde link</a>
-		</li>
-	</ul>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Eerste link</a>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tweede link</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Sublink 1</a>
+						<a class="dropdown-item" href="#">Sublink 2</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Sublink 3</a>
+					</div>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Derde link</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Vierde link</a>
+			</li>
+		</ul>
+	</div>
+	</nav>
 </div>
-</nav>
 	
-	
+<a id="showHere"></a>	
 <div class="container">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi laoreet leo in sem viverra fermentum. Nam facilisis arcu nibh, rutrum tincidunt nulla vestibulum quis. Quisque a elit vel metus mattis efficitur. Nunc diam quam, auctor et aliquet a, sagittis quis orci. Proin luctus tristique arcu, sed vehicula odio volutpat ut. Proin luctus metus dolor, non elementum leo vehicula ut. Morbi viverra varius interdum. Duis quis purus lorem. Aliquam magna enim, dictum sit amet nunc sed, imperdiet pretium urna. In lobortis interdum sagittis.</p>
 
@@ -59,6 +61,9 @@
 
 <p>Vestibulum ornare imperdiet erat eu semper. Donec ligula magna, tempus tincidunt metus ut, ullamcorper sollicitudin sem. Nulla nec interdum justo, a dapibus nisi. Donec tempus, magna in vulputate luctus, odio metus pretium augue, nec mollis justo quam eget leo. Nunc eget felis nisi. Maecenas nec sollicitudin lacus, porta pharetra mauris. Ut rutrum ipsum eget nisi tempor volutpat. Mauris euismod velit mauris, suscipit bibendum eros imperdiet ut. Phasellus bibendum, lorem ac cursus facilisis, magna quam porta nunc, eget feugiat diam neque sed ligula. Aliquam tincidunt maximus ipsum, vitae convallis quam volutpat sed.</p>
 
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi laoreet leo in sem viverra fermentum. Nam facilisis arcu nibh, rutrum tincidunt nulla vestibulum quis. Quisque a elit vel metus mattis efficitur. Nunc diam quam, auctor et aliquet a, sagittis quis orci. Proin luctus tristique arcu, sed vehicula odio volutpat ut. Proin luctus metus dolor, non elementum leo vehicula ut. Morbi viverra varius interdum. Duis quis purus lorem. Aliquam magna enim, dictum sit amet nunc sed, imperdiet pretium urna. In lobortis interdum sagittis.</p>
+
+<p>Vestibulum ornare imperdiet erat eu semper. Donec ligula magna, tempus tincidunt metus ut, ullamcorper sollicitudin sem. Nulla nec interdum justo, a dapibus nisi. Donec tempus, magna in vulputate luctus, odio metus pretium augue, nec mollis justo quam eget leo. Nunc eget felis nisi. Maecenas nec sollicitudin lacus, porta pharetra mauris. Ut rutrum ipsum eget nisi tempor volutpat. Mauris euismod velit mauris, suscipit bibendum eros imperdiet ut. Phasellus bibendum, lorem ac cursus facilisis, magna quam porta nunc, eget feugiat diam neque sed ligula. Aliquam tincidunt maximus ipsum, vitae convallis quam volutpat sed.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi laoreet leo in sem viverra fermentum. Nam facilisis arcu nibh, rutrum tincidunt nulla vestibulum quis. Quisque a elit vel metus mattis efficitur. Nunc diam quam, auctor et aliquet a, sagittis quis orci. Proin luctus tristique arcu, sed vehicula odio volutpat ut. Proin luctus metus dolor, non elementum leo vehicula ut. Morbi viverra varius interdum. Duis quis purus lorem. Aliquam magna enim, dictum sit amet nunc sed, imperdiet pretium urna. In lobortis interdum sagittis.</p>
 
 <p>Vestibulum ornare imperdiet erat eu semper. Donec ligula magna, tempus tincidunt metus ut, ullamcorper sollicitudin sem. Nulla nec interdum justo, a dapibus nisi. Donec tempus, magna in vulputate luctus, odio metus pretium augue, nec mollis justo quam eget leo. Nunc eget felis nisi. Maecenas nec sollicitudin lacus, porta pharetra mauris. Ut rutrum ipsum eget nisi tempor volutpat. Mauris euismod velit mauris, suscipit bibendum eros imperdiet ut. Phasellus bibendum, lorem ac cursus facilisis, magna quam porta nunc, eget feugiat diam neque sed ligula. Aliquam tincidunt maximus ipsum, vitae convallis quam volutpat sed.</p>
@@ -78,5 +83,18 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/headhesive.js"></script>
+<script>
+	var options = {
+		offset: '#showHere',
+		offsetSide: 'top',
+		classes: {
+			clone:   'banner--clone',
+			stick:   'banner--stick',
+		}
+	};
+	var banner = new Headhesive('.menu-top', options);
+</script>
+
 </body>
 </html>
